--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,22 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>connect-json</artifactId>
-            <scope>provided</scope>
+            <version>${kafka.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.7</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
@@ -78,8 +92,9 @@
                 <inherited>true</inherited>
                 <configuration>
                     <compilerArgs>
-                        <arg>-Xlint:all</arg>
+                        <!--<arg>-Xlint:all</arg>
                         <arg>-Werror</arg>
+                        -->
                     </compilerArgs>
                 </configuration>
             </plugin>
